# fbchat-v2

./: .env.example  .gitattributes  .gitignore  .gitmodules  AGENT_MEMORYs.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  DOCS.md  FLOWCHART.md  MANIFEST.in  PACKAGING.md  README.md  README_EN.md  mindmap-mermaid.md  pyproject.toml  test_script.py
.github/: RELEASE_NOTES_v2.1.0.md  RELEASE_NOTES_v2.1.1.md  RELEASE_NOTES_v2.1.4.md  RELEASE_NOTES_v2.2.0.md  RELEASE_NOTES_v2.2.1.md
.github/workflows/: ci.yml  release.yml
bridge-e2ee/: README.md  go.mod  go.sum  main.go
bridge-e2ee/bridge/: events.go  media.go  media_security_test.go
language/: README.md
src/: _e2ee_listening_test.py  _e2ee_send_test.py  config.example.json  config.json  main.py
src/_core/: README.md  README_EN.md  __init__.py  _facebookLogin.py  _http.py  _session.py  _storage.py  _types.py  _utils.py
src/_features/: README.md  README_EN.md
src/_features/_facebook/: __init__.py  _archivePost.py  _blocking.py  _changeBio.py  _createPost.py  _deletePost.py  _get_user_info.py  _marketplace.py  _notification.py  _professional.py  _registerOnProfile.py  _search.py
src/_features/_thread/: __init__.py  _addAdmin.py  _all_thread_data.py  _changeEmoji.py  _changeNameThread.py  _changeNickname.py
src/_messaging/: README.md  README_EN.md  __init__.py  _attachments.py  _bridge_actions.py  _changeTheme.py  _createNotes.py  _editMessage.py  _listening.py  _listening_e2ee.py  _message_requests.py  _reactions.py  _send.py  _send_e2ee.py  _unsend.py
src/fbchat_v2/: __init__.py  py.typed
src/fbchat_v2/_core/: README.md  README_EN.md  _facebookLogin.py  _http.py  _session.py  _storage.py  _types.py  _utils.py
src/fbchat_v2/_features/: README.md  README_EN.md  __init__.py
src/fbchat_v2/_features/_facebook/: __init__.py  _blocking.py  _changeBio.py  _createPost.py  _get_user_info.py  _marketplace.py  _notification.py  _professional.py  _registerOnProfile.py  _search.py
src/fbchat_v2/_features/_thread/: _addAdmin.py  _all_thread_data.py  _changeEmoji.py  _changeNameThread.py  _changeNickname.py
src/fbchat_v2/_messaging/: README.md  README_EN.md  __init__.py  _attachments.py  _bridge_actions.py  _changeTheme.py  _createNotes.py  _editMessage.py  _listening.py  _listening_e2ee.py  _message_requests.py  _reactions.py  _send.py  _send_e2ee.py  _unsend.py
tests/: conftest.py  test_async_first.py  test_attachments.py  test_changeTheme.py  test_createNotes.py  test_editMessage.py  test_message_requests.py  test_reactions.py  test_send.py  test_session.py  test_storage.py  test_unsend.py  test_utils.py
